--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@xstate/react": "^4.1.0",
     "lucide-react": "^0.344.0",
     "phoenix": "^1.7.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
+    "react-use": "^17.6.0",
     "xstate": "^5.9.1",
-    "@xstate/react": "^4.1.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
